--- a/css/css3.css
+++ b/css/css3.css
@@ -499,13 +499,14 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%;font:14p
 .number_box{
 	width: 44px;
 	height: 44px;
-	display: inline-block;
+	display: block;
+	margin: 0 auto;
 	line-height: 44px;
 	color: #fff;
 }
 
 .part{
-	margin-top: 10rem;
+	margin-top: 15rem;
 }
 
 .nb{
@@ -605,7 +606,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%;font:14p
 
 .design_ui{
 	padding: 2rem 0;
-	font-size: 16px;
+	font-size: 0.875rem;
 }
 
 .design_ui em{
@@ -623,7 +624,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%;font:14p
     margin:1.5rem 0 0.5rem;
 }
 .design_img img{
-	width: 70%;
+	width: 60%;
 }
 /*xiaomi*/
 .cb_xiaomi img{
