--- a/css/css3.css
+++ b/css/css3.css
@@ -605,7 +605,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%;font:14p
 }
 
 .design_ui{
-	padding: 2rem 0;
+	padding: 2rem 0 0 0;
 	font-size: 0.875rem;
 }
 
