--- a/css/css3.css
+++ b/css/css3.css
@@ -5,16 +5,24 @@ a,input,textarea,button{
 	outline: none;
 }
 /*header.css*/
-body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-family: 'Lato', sans-serif; }
+body{font-size: 62.5%; overflow-y: scroll;background: #f2f2f5;height: 100%; font-family: 'Lato', sans-serif; }
 .header{
 	height: 97px;
-	position: relative;
+	position: fixed;
 	top: 0;
 	margin: 0 auto;
 	left: 0;
 	width: 100%;
 	z-index: 9999;
-	background: #fff;
+	-webkit-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+	-moz-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+	-o-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+	transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+}
+.scrolled{
+	background: rgba(255,255,255,0.97);
+	height: 60px;
+	color: rgba(0,0,0,.7);
 }
 
 .header a{
@@ -23,32 +31,55 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 }
 
 .header-box{
-	width: 960px;
+	width: 100%;
 	height: 97px;
 	position: relative;
 	margin: 0 auto;
-	padding: 0;
 }
 
 .top-img {
 	position: relative;
-	top: 24px;
 	display: inline-block;
-	left: 0;
 }
+
+.top-img  a{
+	display: block;
+}
+
 .top-img img{
-	width: 50px;
-	height: auto;
+	width: auto;
+	height: 97px;
+}
+
+#content{
+	position: absolute;
+	width: 100%;
+	z-index: 1;
+	height: 100%;
+}
+
+canvas{
+	text-align: center;
+	width: 100%;
+}
+
+.sub_th_1{
+	position: relative;
+	z-index: 2;
+	height: 100%;
+	padding-top: 19rem;
 }
 
 .menu {
-	position: absolute;
+	position: relative;
 	text-decoration: none;
 	width: auto;
 	display: inline-block;
 	margin: 0;
 	top: 0;
 	right: 0;
+	float: right;
+	font-size: .75rem;
 }
 
 .menu li {
@@ -61,16 +92,26 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 }
 
 .menu li a {
-	color: #000;
+	color: rgba(255,255,255,0.5)
 }
 
 .menu li a:hover{
-	color: rgba(0,0,0,.5);
+	color: rgba(255,255,255,1);
 }
 
 .header a {
 	text-decoration: none;
 	list-style-type: none;
+}
+
+.selected a{
+	color: #fff!important;
+}
+
+/*.selected0 a{
+	color: #00abf4!important;
+	border-bottom: 3px solid#00abf4;
+    padding-bottom: 10px;
 }
 
 .selected a {
@@ -80,12 +121,268 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 }
 
 .selected2 a{
-	color: #f27979!important;
-	border-bottom: 3px solid#f27979;
+	color: #ee1d53!important;
+	border-bottom: 3px solid#ee1d53;
     padding-bottom: 10px;
+}
+*/
+
+.title_header{
+	position: relative;
+	text-align: center;
+	height: 100vh;
+	background: #5cc1af;
+}
+
+.title_header_portfoilo{
+	background: #5C97C1;
+}
+
+.p1{
+	color: #fff;
+	font-size: 3.5rem;
+	font-weight: 500;
+}
+
+.b1,.b2{
+	top: 0px;
+	position: relative;
+}
+
+
+
+.sub_th_1 .p3{
+	width: 3rem;
+    -webkit-animation-name: shrink;
+}
+
+.p3{
+  width: 0;
+  height: 5px;
+  background: #FA217C;
+  display: inline-block;
+  margin: 1rem 0;
+  position: relative;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-delay: 0s;
+  -webkit-animation-timing-function: ease;
+  -webkit-animation-fill-mode: forwards;
+}
+
+.p4{
+	color: #fff;
+	font-size: 1.05rem;
+	position: absolute;
+	margin:0 auto;
+	font-weight: 100;
+	line-height: 2;
+	left: 0;
+	right: 0;
+	bottom: 35px;
+}
+
+.sub_th_1 .p2{
+	-webkit-animation-name:run;
+	bottom: 15px;
+}
+
+.p2{
+	  position: absolute;
+	  bottom: 15px;
+	  left: 0;
+	  right: 0;
+	  height: 15px;
+	  -webkit-animation-duration: 1.5s;
+	  -webkit-animation-iteration-count: infinite;
+	  -webkit-animation-delay: 0s;
+	  -webkit-animation-timing-function: ease-out;
+	  -webkit-animation-fill-mode: forwards;
+	  animation-direction: alternate;
+}
+
+.p2:before,.p2:after{
+	  content: "";
+	  display: block;
+	  background: rgb(255,255,255);
+	  width: 2px;
+	  height: 20px;
+	  position: absolute;
+	  left: 50%;
+	  bottom: 0;
+	  -webkit-transform: rotate(-55deg);
+	  -webkit-transform-origin: 100% 100%;
+}
+
+.p2:after{
+  -webkit-transform: rotate(55deg);
+  -webkit-transform-origin: 0 100%;
+}
+
+.p2{
+	display: block;
+}
+
+.p2:hover{
+	opacity: 1;
+}
+
+.p2 a{
+	width: 100%;
+	height: 25px;
+	display: inline-block;
+}
+
+@-webkit-keyframes run {
+    0%{bottom: 18px;}
+    50%{bottom: 10px}
+    100%{bottom: 18px;}
+}
+
+@keyframes run {
+    0%{bottom: 18px;}
+    50%{bottom: 10px}
+    100%{bottom: 18px;}
+}
+
+@-webkit-keyframes shrink{
+	0%,28% { width:.6rem; -webkit-transform: translateX(-1rem);}
+    14%,42% { width:.6rem; -webkit-transform: translateX(1rem);}
+    49% { width:.6rem; -webkit-transform: translateX(0px);}
+    100% { width:3rem;}
+}
+
+keyframes shrink{
+	0%,28% { width:.6rem; -webkit-transform: translateX(-1rem);}
+    14%,42% { width:.6rem; -webkit-transform: translateX(1rem);}
+    49% { width:.6rem; -webkit-transform: translateX(0px);}
+    100% { width:3rem;}
+}
+
+.project_intro{
+	background:#fff;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+  position: relative;
+  z-index: 2;
+}
+
+.wrapper{
+	padding: 5rem 0;
+}
+
+.wrapper_word{
+	width: 49%;
+	position: relative;
+    display: inline-block;
+	padding: 0 2rem;
+}
+
+.wrapper_word_inner h2{
+	color: #fff;
+	font-size: 1.75rem;
+}
+
+.wrapper_word_inner_line
+{ 
+  width: 80px;
+  height: 2px;
+  background: rgba(255,255,255,.5);
+  display: inline-block;
+  margin: .5rem 0;
+  position: relative;
+}
+
+.wrapper_word_inner_p{
+	color: rgba(255,255,255,.7);
+}
+
+.wrapper_word_inner_intro{
+	color: #fff;
+	font-weight: 200;
+	font-size: 1.25rem;
+}
+
+.wrapper_word_inner_intro p{
+	margin-top: 1rem;
+}
+
+.wrapper_img{
+    position: relative;
+	z-index: 9;
+	width: 49%;
+	padding: 0 2rem; 
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.wrapper_img img{
+	width: 95%;
+	height: auto;
+	transition:all .5s;
+	-webkit-transition:all .5s;
+	-o-transition:all .5s;
+	-ms-transition:all .5s;
+	-moz-transition:all .5s;
+}
+
+.wrapper_img img:hover{
+ -webkit-transform:scale(1.05, 1.05);
+ -moz-transform:scale(1.05, 1.05);
+ -ms-transform:scale(1.05, 1.05);
+ -o-transform:scale(1.05, 1.05);
+ transform:scale(1.05, 1.05)
+}
+
+.wrapper_img ul{
+	float: right;
+}
+
+.wrapper_img ul li{
+	text-decoration: none;
+	list-style-type: none;
+	width: 49%;
+	height: auto;
+	text-align: center;
+	vertical-align: middle;
+	display: inline-block;
+	padding-bottom: 1rem;
+}
+
+.wrapper_img_btn{
+  -webkit-transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  -moz-transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  -o-transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  font-weight: 700;
+  font-size: 0.875rem;
+  text-transform: uppercase;
+  font-style: normal;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  position: relative;
+  padding: 0.65rem 1.235rem;
+  border: 1px solid#fff;
+  color: #fff;
+}
+
+.wrapper_img_btn:hover{
+	color: #44b5d5;
+	border: none;
+	background: #fff;
 }
 
 .intro{
+	margin:97px 0 0 0;
 }
 
 .intro_portfolio{
@@ -95,7 +392,8 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 .intro_infor{
 	width: 960px;
 	margin: 0 auto;
-	padding: 4rem 0;
+	padding: 4rem 0rem;
+	position: relative;
 }
 
 /*Cv*/
@@ -105,12 +403,16 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 	padding: 4rem 0.5rem;
 }
 
+.cv_page section{
+	padding-top: 1rem;
+}
+
 .cv_name{
 	text-align: center;
 	font-size: 2rem;
 	font-family: Helvetica;
 	padding: 0 0 4rem 0;
-	color: rgb(191,59,96);
+	color:#ee1d53;
 }
 
 .ati{
@@ -119,12 +421,22 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 
 .main_t{
 	font-size: 1.125rem;
+	color: #fff;
 }
 .ati p{
 	font-size:0.75rem;
 	padding: 0.3125rem 0 0 0;
-	color: rgba(0,0,0,0.7);
+	color:#AFB1B5;
 	width: 60%;
+}
+
+.ati span{
+	color:#787f8c;
+}
+
+.cv_page h1{
+	color: #5c5c5c;
+	font-size: 1.25rem;
 }
 
 .main_t_r{
@@ -132,10 +444,13 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 }
 
 .intro_infor_left{
-	width: 44%;
-	float: left;
-	position: relative;
+	width: 10rem;
+	height: 10rem;
 	font-size: 1.25rem;
+	border-radius: 50%;
+	overflow: hidden;
+	display: block;
+	margin: 0 auto;
 }
 
 .intro_infor_left span{
@@ -146,26 +461,90 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 	padding: 0.5rem 1rem;
 }
 
+.intro_infor_left img{
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
 #gre{
 	background: #39d1b4;
 }
 
 #red{
-	background: #f27979;
+	background: #ee1d53;
 }
 
 .intro_infor_right{
     width: 55%;
-	display: inline-block;
+	display: block;
 	position: relative;
 	right: 0;
 	font-size: 0.95rem;
 	line-height: 1.6;
+	margin: 0 auto;
+	padding-top: 6rem;
 }
 
+.p_t{
+	float: right;
+}
+
+.p_t span{
+  display: inline-block;
+  line-height: 1.25rem;
+  background: #eee;
+  color: #666;
+  padding: 0.5rem 1rem;
+  font-size: 1.25rem;
+}
+
+.p_t_left{
+	width: 960px;
+	margin: 0 auto;
+	padding: 3rem 0;
+}
+
+.p_t_left ul{
+	list-style-type: none;
+}
+
+.p_t_left ul li{
+  display: inline-block;
+  text-align: center;
+  margin-right: 2rem;
+}
+
+.p_t_left ul li a{
+  line-height: 2.25rem;
+  color: #333;
+  width: 100px;
+  height: 2.25rem;
+  display: block;
+  font-size: 0.875rem;
+  background: #fff;
+}
+
+.current{
+	background: #39d1b4!important;
+	color: #fff!important;
+}
+
+.intro_infor_right h1{
+	font-weight: 300;
+	  margin-bottom: 1.5rem;
+	  text-align: center;
+	  color: #5c5c5c;
+	  font-size: 1.75rem;
+}
+.intro_infor_right b{
+	font-weight: 400;
+}
+
+
 .intro_infor_right p{
-	font-weight: lighter;
-	color: rgba(0,0,0,.6);
+	font-weight: 300;
+	color: #787f8c;
 }
 
 .intro_infor_right em{
@@ -223,16 +602,15 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 /*footer.css*/
 .footer {
 	width: 100%;
-	height: 170px;
-	background: #fff;
 	position: relative;
-	margin-top: 150px;
+	height: 100px;
+	z-index: 3;
 }
 
 .bot-link {
 	width: 960px;
 	margin: 0 auto;
-	height: 170px;
+	height: 120px;
 	position: relative;
 }
 
@@ -244,19 +622,25 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 }
 
 .lik {
-	line-height: 3;
+	float: left;
+	margin-right: 2rem;
 }
 .lik span{
-	display: inline-block;
+	display: block;
 }
 
 .email{
-	background: url(../img/email.png) no-repeat;
-	background-size: contain;
+	background: url(../img/email.png) no-repeat 50% 100%;
+	background-size: 120%;
 }
-.phone{
-	background: url(../img/phone.png) no-repeat;
+.linkein{
+	background: url(../img/linkedin.png) no-repeat;
     background-size: contain;
+}
+
+.phone{
+	background: url(../img/phonecall.png) no-repeat;
+    background-size: 100%;
 }
 
 .lik-t{
@@ -271,12 +655,9 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 }
 
 .footer a {
-	color: #000;
-	text-decoration: none;
-	font-size: 14px;
-	line-height: 22px;
+	width: 20px;
+	height: 20px;
 	display: block;
-	padding-left: 30px;
 }
 
 .bot-ex p{
@@ -309,10 +690,97 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 
 /*index.css*/
 .hidden{display: none;}
-.BD{margin: 0;width: 100%; padding: 30px;}
-.Bg{background: #fff;}
+.BD{margin: 0;width: 100%;}
 .container{
-  padding: 40px 0;
+  background: #fbfbfb;
+  position: relative;
+  z-index: 999;
+}
+
+.portfolio_content{
+	width: 960px;
+	margin: 0 auto;
+	padding: 9rem 2rem;
+}
+
+.inner{
+  width: 80%;
+  display: inline-block;
+  margin-left: 8rem;
+}
+
+.portfolio_content_right .inner{
+	margin-left: 0;
+}
+
+.heading2{
+	font-size: 1.875rem;
+}
+
+.heading2 a{
+	color: #5c5c5c;
+	font-weight: 400;
+}
+
+.headingline{
+  color: #39d1b4!important;
+  border-bottom: 3px solid#39d1b4;
+  height: 4px;
+  width: 80px;
+  display: block;
+  margin: 1rem 0;
+}
+
+.meta,.quote,.heading6,.heading3{
+	padding-bottom: 1rem;
+}
+
+.meta p{
+    font-style: italic;
+    color: rgba(100,100,100,.5);
+}
+
+.heading6{
+	font-size: 1.25rem;
+	color: #787f8c;
+	font-weight: 300;
+}
+
+.portfolio_content_img{
+  width: 30%;
+  display: inline-block;
+}
+
+.portfolio_content_img img{
+	width: 100%;
+	height: auto;
+}
+
+.btn{
+  -webkit-transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  -moz-transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  -o-transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  transition: all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+  padding: .5rem 1rem;
+  border: 2px solid #5abd4f;
+  border-radius: 3px;
+  display: inline-block;
+}
+
+.btn:hover{
+	border: 2px solid #5abd4f;
+	background: #5abd4f;
+	color: #fff;
+}
+
+.copy{
+  width: 70%;
+  display: inline-block;
+  float: right;
+}
+
+.portfolio_content_right .copy{
+	float: left;
 }
 
 .show_btn{
@@ -330,157 +798,10 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
     color: #32c182;
 }
 
-.waterfall{
-  width: 960px;
-  margin: 50px auto;
-  position: relative;
-}
-
-.img-list{
-	display: inline-block;
-	width: 990px;
-}
-
-.img-list li{
-  float: left; 
-  list-style: none; 
-  height: 180px;
-  width: 300px; 
-  margin: 0 30px 50px 0;
-}
-
-.img-list li:last-child{
-	margin: 0;
-}
-
-#box_2,#box_mobile{
-    width: 380px;
-	height: 340px;
-	margin: 0 0 50px 0;
-	background: #fff;
-}
-
-#box_2,#box_mobile a{
-	display: block;
-}
-
-.img-list li:hover{
-  box-shadow: 0 0 8px 1px rgba(100,100,100,0.3);
-}
-
-.img-box{
-	overflow: hidden;
-}
-
-.img-box img{
-  display:block;
-  width: 300px;
-  height: 180px;
-  -webkit-transition: all .5s;
-  -o-transition: all .5s;
-  transition: all .5s;
-}
-
-.img-box img:hover{
-	-webkit-transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	-o-transform: scale(1.1);
-	transform: scale(1.1);
-}
-
-.m-box{
-  display: none;
-}
-
-#img-box-b{
-  width: 540px;
-  height: 340px;
-  margin-right: 40px;
-}
-
-#b-img{
-  width: 540px;
-  height: 340px; 
-  display: block;
-}
-
-#m-img{
-	width: 380px;
-	height: 340px;
-	display: block;
-	margin: 0 auto;
-}
-
-
-.box{
-  height:68px; 
-  background: rgba(0,0,0,0.1);
-  position: relative;
-  display: block;
-  top: -68px;
-  z-index: 1;
-  color: #fff;
-}
-
-.img-title{padding:0 0 0 15px; height: 33px; position: relative;}
-
-.img-title span{
-  position: absolute;
-  display: block; 
-  white-space: nowrap;
-  font-size: 18px;
-  top: 15px;
-  color: #fff;
-}
-
-.img-title span:hover{
-	color: #f6bd25;
-}
-
-.sub-img-title{
-  padding:0 15px 0 15px; 
-  color: #ccc; 
-  font-size: 12px; 
-  position: relative;
-}
-
-.head-img{
-  position:relative;
-  color: rgba(255,255,255,.6);
-}
-
-.head-img a{
-  width: 210px;
-  height: 35px;
-  display: inline-block;
-  position: relative;
-}
-
-.head-img img{
-  width:24px;
-  height:24px;
-  display: inline-block;
-  margin: 10px 0 8px 0;
-  border-radius: 50%;
-}
-
-.head-img-name{
-  top: 15px;
-  position: absolute;
-  color: rgba(255,255,255,.6);
-}
-
-.head-img-name:hover{
-	color: #999;
-}
-
-
-
 /*portfolio*/
 .main_design_container{
 	width: 100%;
 	height: 100%;
-	background: #fff;
 }
 
 .container_box{
@@ -489,6 +810,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 	text-align: center;
 	position: relative;
 	line-height: 1.5;
+	margin: 147px 0 0 0;
 }
 
 .space_box{
@@ -654,12 +976,16 @@ em{
 	padding: 2rem 0;
 }
 
-.design_img{
+.design_img, .design_img_high{
     margin:1.5rem 0 0.5rem;
 }
 .design_img img{
 	width: 90%;
 }
+.design_img_high img{
+    width: 70%;
+}
+
 #ti_img{width: 15%; margin: 1.5rem auto;}
 /*xiaomi*/
 .cb_xiaomi img{
@@ -868,9 +1194,9 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	height: 100%;
 }
 
-@media screen and (min-width: 1400px){
+@media screen and (min-width: 1025px){
 	.header-box{
-		width: 640px;
+		width: 960px;
 	}
 }
 
@@ -879,26 +1205,14 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	.header-box{
 		width: 630px;
 	}
-	.waterfall{
-		width: 630px;
-	}
-	.img-list{
-		width: 630px;
-	}
 	.location{
 		display: none;
-	}
-	#img-box-b{
-		margin: 0 0 30px 0;
 	}
 	.menu{
 		right: 0;
 	}
 	.intro_infor{
 		width: 100%;
-	}
-	.search-box{
-		display: none;
 	}
 	.footer{
 		height: 130px;
@@ -918,24 +1232,6 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	}
 	.container{
 		margin-right: 0px;
-	}
-	.waterfall{
-		width: 480px;
-	}
-	#img-box-b{
-		margin: 0 0 30px 0;
-		
-	}
-	.img-list li{
-		
-		margin: 0 0 30px 0;
-	}
-	.img-box img{
-		
-	}
-	.head-img img{
-		width: 24px;
-		height: 24px;
 	}
 	.menu{
 		display: none;
@@ -963,9 +1259,7 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	.location{
 		display: none;
 	}
-	.search-box{
-		display: none;
-	}
+
 	.footer{
 		height: 130px;
 	}
@@ -986,54 +1280,27 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
     .container{
     	padding: 0 0.9375rem;
     }
-    .waterfall{
-    	width: 100%;
-    }
-    .img-list{
-    	width: 100%;
-    }
+
+    /*首页*/
+    .sub_th_1{
+		padding: 16rem 0.9375rem 0;
+	}
+	.p1{
+		font-size: 2.5rem;
+	}
+	.portfolio_content{
+		width: 100%;
+	}
+	.portfolio_content_img{
+		width: 100%;
+	}
+
     .design_ui,.design_p{width: 100%; padding: 0 0.9375rem;}
     .part_2{margin-top: 8rem;}
     .nb{margin-top: 8rem;}
-    .img-list li{
-    	width: 100%;
-    	height: auto;
-    	margin: 0 0 30px 0;
-    }
-    #img-box-b{
-    	width: 100%;
-    	height: 100%;
-    	margin: 0 0 30px 0;
-    }
     .bot-link{
     	width: 100%;
     	padding: 0 0.9375rem;
-    }
-    #b-img{
-    	width: 100%;
-    	height: auto;
-    }
-    #b_box{
-    	width: 100%;
-    }
-    .img-box img{
-    	width: 100%;
-    	height: auto;
-    }
-    .head-img img{
-    	width: 24px;
-    	height: 24px;
-    }
-    .img-box a{
-    	display: block;
-    	overflow: hidden;
-    }
-    .box{
-    	top: 0px;
-    	width: 100%;
-    }
-    .search-box{
-    	display: none;
     }
     .menu{
         display: none;
@@ -1053,36 +1320,19 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	.menu li a{
 		display: block;
 	}
-
-	#box_2{
-		width: 100%;
-		height: auto;
-		margin: 0 0 30px 0;
-	}
-
-	#box_2 img{
-		width: 100%;
-        height: auto;
-	}
-	#box_mobile{
-		width: 100%;
-		height: auto;
-		background: #fff;
-		margin: 0 0 30px 0;
-	}
 	.top-img{
 		left: 0.9375rem;
 	}
 	.intro_infor_left{
-		float: none;
+		float: left;
 		width: 100%;
-		padding: 0 0.9375rem;
 		font-size: 1.5rem;
 	}
 	.intro_infor_right{
 		padding: 0 0.9375rem;
-		display: block;
+		display: inline-block;
 		width: 100%;
+		position: relative;
 	}
 	.intro_infor_right p{
 		padding-top: 1.5rem;
