--- a/css/css3.css
+++ b/css/css3.css
@@ -1360,10 +1360,16 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 		width: 100%;
 	}
 
-	#background:{
+#background:{
 	text-align: center;
 	width: auto;
 	height: 100%;
+}
+
+.canvas_img{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
 
 .inner{
