--- a/css/css3.css
+++ b/css/css3.css
@@ -64,8 +64,7 @@ body{font-size: 62.5%; overflow-y: scroll;background: #f2f2f5;height: 100%; font
 	overflow: hidden;
 }
 
-#background: {
-	text-align: center;
+.background{
 	width: 100%;
 	height: auto;
 }
