--- a/css/css3.css
+++ b/css/css3.css
@@ -1407,7 +1407,7 @@ src:url(../font/Avenir.otf?#iefix) format('embedded-opentype'), url(../font/Aven
 	overflow: hidden;
 }
 
-#background:{
+.background:{
 	text-align: center;
 	width: auto;
 	height: 100%;
