--- a/css/css3.css
+++ b/css/css3.css
@@ -25,6 +25,23 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 	background: rgba(255,255,255,0.97);
 	height: 60px;
 	color: rgba(0,0,0,.7);
+	box-shadow: 0 0 0px 0 rgba(0,0,0,0.2),0 3px 8px 0 rgba(0,0,0,0.24);
+}
+
+.scrolled .header-box .menu li a{
+	color: rgba(0,0,0,0.3);
+}
+
+.scrolled .top-img img{
+	height: 60px;
+}
+
+.scrolled .menu li{
+	padding: 22px 0 18px 40px;
+	-webkit-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+	-moz-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+	-o-transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+	transition:all 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
 }
 
 .header a{
@@ -46,6 +63,23 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 
 .top-img  a{
 	display: block;
+}
+
+.logo_img{
+	background: url(../img/logo.png) 50% 50%;
+	display: block;
+    height: 97px;
+    width: 97px;
+    background-size: 100%;
+}
+
+.scrolled .logo_img{
+  background: url(../img/l-bg.png) 50% 50%;
+  display: block;
+  height: 50px;
+  width: 45px;
+  margin: 5px 0;
+  background-size: contain;
 }
 
 .top-img img{
@@ -87,7 +121,6 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 	top: 0;
 	right: 0;
 	float: right;
-	font-size: .75rem;
 }
 
 .menu li {
@@ -97,11 +130,12 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 	padding: 41px 0 36px 40px;
 	color: #666;
 	line-height: 20px;
+    font-size: .75rem;
+    font-weight: 500;
 }
 
 .menu li a {
 	color: rgba(255,255,255,0.5);
-	font-weight: 500;
 }
 
 .menu_resume li a{
@@ -123,6 +157,10 @@ body{font-size: 62.5%; overflow-y: scroll;background: #fff;height: 100%; font-fa
 
 .selected a{
 	color: #fff!important;
+}
+
+.scrolled .selected a{
+	color: rgba(0,0,0,0.5)!important;
 }
 
 .menu_resume .selected a{
