--- a/css/css3.css
+++ b/css/css3.css
@@ -799,6 +799,10 @@ keyframes shrink{
 	background: #fff;
 }
 
+.container_piece_1{
+	padding: 10rem 0 0;
+}
+
 .container_piece_2{
 	background: #458fcf;
 }
@@ -977,7 +981,6 @@ keyframes shrink{
 	text-align: center;
 	position: relative;
 	line-height: 1.5;
-	margin: 147px 0 0 0;
 }
 
 .space_box{
@@ -1001,10 +1004,8 @@ keyframes shrink{
 
 .part_1{
 	margin-top: 0;
-}
-
-.nb{
-	margin-top: 5rem;
+	padding: 10rem 0;
+	background: #000;
 }
 
 
@@ -1021,6 +1022,11 @@ keyframes shrink{
 
 .cb_sohufilm .design_title{
 	color: #dab564;
+}
+
+.film_box{
+	background: #000;
+	padding: 10rem 0;
 }
 
 
@@ -1095,7 +1101,6 @@ keyframes shrink{
 .title_inside{
 	font-size: 1.5rem;
 	font-weight: bold;
-	margin: 1.5rem 0 0;
 	color: #dab564;
 }
 
