--- a/css/css3.css
+++ b/css/css3.css
@@ -800,7 +800,7 @@ keyframes shrink{
 }
 
 .container_piece_1{
-	padding: 10rem 0 0;
+	padding: 5rem 0 0;
 }
 
 .container_piece_2{
@@ -1026,8 +1026,7 @@ keyframes shrink{
 }
 
 .film_box{
-	background: #000;
-	padding: 10rem 0;
+	padding: 5rem 0 0 0;
 }
 
 
@@ -1114,7 +1113,7 @@ keyframes shrink{
 }
 
 .web_link a:hover{
-	color: rgba(0,0,0,0.4);
+	color: rgba(255,255,255.4);
 }
 
 .design_ui{
